Fix text cutoff

--- a/src/app/tabs.scss
+++ b/src/app/tabs.scss
@@ -57,7 +57,7 @@ body:not(.stacked-nav-off) .mod-left-split .workspace-tabs.mod-top-left-space .s
     content: none;
   }
   .workspace-tab-header-inner-title {
-    line-height: 1;
+    line-height: normal;
   }
 
   .sidebar-toggle-button {
